Move code to fragment and add other features
1. Moves main activity code to fragment
2. Creates tabs (home timeline and mentions timeline)
3. Creates profile activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,8 @@
     <string name="tv_retweet_placeholder">Someone retweeted</string>
     <string name="retweet_count_placeholder">0</string>
     <string name="favorite_count_placeholder">0</string>
+    <string name="profile">Profile</string>
+    <string name="title_activity_profile">Profile</string>
 
 
 </resources>
